[project]
name = "lang-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langgraph>=1.2.9",
    "pypdf>=6.14.2",
]
