[project]
name = "lang-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "bm25-retriever>=0.3",
    "chromadb>=1.5.9",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-nvidia-ai-endpoints>=1.4.3",
    "langgraph>=1.2.9",
    "langsmith>=0.10.2",
    "pypdf>=6.14.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]
